--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <link rel="stylesheet" href="css/app.css">
   <title>React/ES6/Stylus/BrowserSync Boilerplate</title>
 </head>
+
 <body>
-  <main id="main">
-  </main>
+  <div id="main"></div>
   <script src="bundle.js"></script>
 </body>
