--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="css/app.css">
-  <title>React/ES6/Stylus/BrowserSync Boilerplate</title>
+  <title>blocPong</title>
 </head>
 
 <body>
